<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:padding="4dp"
    android:clipChildren="false"
    android:clipToPadding="false" >

    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/control_height"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/control_positon"
        android:textAlignment="center"
        android:paddingTop="2dp"
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/seekbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" />

    <TextView
        android:id="@+id/header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/control_rotation"
        android:textAlignment="center"
        android:paddingTop="2dp"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <SeekBar
        android:id="@+id/seekbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:visibility="gone"/>



</LinearLayout>