<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assignmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/date_assigned"
                android:textSize="14sp"
                android:padding="@dimen/small_padding"/>

            <TextView
                android:id="@+id/assignmentAssignedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="@dimen/small_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/date_due"
                android:textSize="14sp"
                android:padding="@dimen/small_padding"/>

            <TextView
                android:id="@+id/assignmentDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="@dimen/small_padding"/>

        </LinearLayout>


        <TextView
            android:id="@+id/assignmentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="@dimen/small_padding"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:text="@string/your_work"
                android:layout_alignParentStart="true"
                android:padding="@dimen/small_padding"/>

            <TextView
                android:id="@+id/assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_green_color"
                android:text="@string/assigned_tv"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/small_padding"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/grade"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textColor="@color/white"
            android:padding="@dimen/small_padding"
            android:background="@drawable/circle_blue"
            style="@style/TextAppearance.AppCompat.Display2"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageUpload"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_padding"
            android:contentDescription="@string/assignment_submission"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/addAttachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_attachment"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:padding="@dimen/small_padding"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            style="@style/ButtonStyle"
            android:textColor="@color/white"/>

    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/submissionProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"/>

</RelativeLayout>